# SFHacks

./: README.md  main.py  mycredentials.json  notes.db  pyproject.toml
static/assets/counter/: counter.json
templates/: base.html  index.html
templates/admin/: form.html  home.html
templates/admin/notes/: notes.html
